Changes to the Level
Moved lockers and testing commits.

--- a/Saved/Config/Windows/EditorUserSettings.ini
+++ b/Saved/Config/Windows/EditorUserSettings.ini
@@ -49,7 +49,7 @@ CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1430.000 Y=870.000
+WindowSize=X=1440.000 Y=880.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -82,7 +82,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
-UNR=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/StarterContent/Maps
+UNR=../../../../../../git repos/LaundryRoom/Content/StarterContent/Maps
 BRUSH=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/
 FBX=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/
 FBXAnim=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/
@@ -458,7 +458,8 @@ TextureEditor.TimeStamp=2015.05.21-10.56.36
 TextureEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/StarterContent/Maps/Minimal_Default.umap
+MRUItem0=D:/git repos/LaundryRoom/Content/StarterContent/Maps/Minimal_Default.umap
+MRUItem1=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content/StarterContent/Maps/Minimal_Default.umap
 
 [LightingBuildOptions]
 QualityLevel=2
@@ -713,7 +714,7 @@ Warning_CompileErrorsInMaterial=False
 StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,
 
 [DetailPropertyExpansion]
-StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings" 
 PostProcessVolume=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 Volume=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 Brush=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
