--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=C:/Users/Eshan/Documents/Unreal Projects/MyProject3/Content
+Paths=../../../../../../git repos/LaundryRoom/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
