--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -1,8 +1,7 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../git repos/LaundryRoom/Content
+Paths=%GAMEDIR%Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
-Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path=)
@@ -18,8 +17,5 @@ MulticastTimeToLive=1
 EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
-
-[/Script/UnrealEd.EditorEngine]
-FlipNormalMapGreenChannel=False
 
 
